--- a/style.css
+++ b/style.css
@@ -11,16 +11,13 @@ h2 {
   margin-bottom: 20px;
 }
 
-video {
-  transform: none; /* normal (nggak mirror) */
-}
-
 #camera {
   width: 90vw;
   max-width: 400px;
   border: 4px solid #00ffff;
   border-radius: 10px;
   box-shadow: 0 0 20px #00ffff;
+  transform: none; 
 }
 
 #countdown {
@@ -148,5 +145,6 @@ footer a {
 footer a:hover {
   background-color: #cc00cc;
 }
+
 
 
