--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ h2 {
   border: 4px solid #00ffff;
   border-radius: 10px;
   box-shadow: 0 0 20px #00ffff;
-  transform: none; 
+  transform: none !important;
+  -webkit-transform: none !important;
+  scale: 1 !important;
 }
 
 #countdown {
@@ -145,6 +147,7 @@ footer a {
 footer a:hover {
   background-color: #cc00cc;
 }
+
 
 
 
